project/tests/in_progress/for_main/bad/types/composite_types/pointers/simple_types_ptr/long_long/long_long_ptr02/long_long_ptr02.c
#include <stdio.h>

long long a = 457346743;
long long *b = &a;

int main() {
    printf("%d\n", *b);
    return 0;
}
